# phase-stitcher

./: .gitignore  EDA on hapstats data generated from phase stitcher.ipynb  README.md  READme.md  Stitcher_using_1stOrderMarkov_InteractiveMode.py  args_builder.py  args_extractor.py  compute_transition.py  phase-Stitcher.py  phase-Stitcher_v1.1.py  phase_stitcher.py  phaser.py  requirements.txt  runtest.sh  setup.cfg  setup.py  utils.py
.github/workflows/: pythonapp.yml
OldVersions/v1.0/: Stitcher_using_1stOrderMarkov_InteractiveMode.py
OldVersions/v1.0/test_example/: SP_subSample.vcf
OldVersions/v1.0/test_output/: 2ms04h_haplotype_landscape.txt  test_Sp_allele_table.txt  (+1 more)
example/: F1_subSample.vcf
example01/: input_phaseStitcher01ms02g-small04.txt  ms02g_haplotype_long.txt
example_01/ms02g_stitched/: ms02g_haplotype_long.txt  ms02g_haplotype_stats.txt  ms02g_haplotype_wide.txt
example_02/ms02g_stitched/: ms02g_haplotype_long.txt  ms02g_haplotype_stats.txt  ms02g_haplotype_wide.txt  ms02g_missing_data.txt
example_data/: ms02g_haplotype_wide.txt  ms02g_missing_data.txt
ms02g_stitched/: ms02g_haplotype_stats.txt
old_version/: phase-Stitcher.py
phase_stitcher/: __main__.py  args_builder.py  args_extractor.py  compute_stats.py  phase_stitcher.py  phaser.py
phase_stitcher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test_example/: MY_subSample.vcf
test_output/: 2ms04h_haplotype_potrait.txt  test_My_allele_table.txt
tests/: test_phase_sticher.py  test_phaseextender.py
tests/inputs/: haplotype_file01.txt
(+9 files in other folders)
