[metadata]
name = phase_stitcher
version = 0.0.2
author = Bishwa K. Giri
author_email = kirannbishwa01@gmail.com
description = a python program to stitch the ReadBack phased haplotypes in F1 hybrids.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/everestial/pHASE-Stitcher
project_urls =
    Bug Tracker = https://github.com/everestial/pHASE-Stitcher
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
packages = phase_stitcher

python_requires = >=3.7

[options.entry_points]
console_scripts =
    phase_stitcher = phase_stitcher.__main__:main
    phase-Stitcher = phase_stitcher.__main__:main
    phase-stitcher = phase_stitcher.__main__:main

